--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -29,9 +29,14 @@
                 <p class="result-display"></p>
                 <p class="turn-display"></p>
                 <p class="score-display"></p>
-                <button class="reset-button" onclick="reset()">
-                    Reset Score
-                </button>
+                <div>
+                    <button class="reset-button" onclick="reset()">
+                        Reset Score
+                    </button>
+                    <button class="autoplay-button" onclick="autoplay()">
+                        Autoplay
+                    </button>
+                </div>
             </div>
         <script src="JavaScript/javascript.js"></script>
         </section>
